force-app/core/main/default/objects/Persona_Archetype__mdt/Persona_Archetype__mdt.object-meta.xml
<CustomObject>
    <label>Persona Archetype</label>
    <pluralLabel>Persona Archetypes</pluralLabel>
</CustomObject>