force-app/core/main/default/objects/Persona_Archetype__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>64</length>
    <type>Text</type>
</CustomField>