force-app/core/main/default/objects/Persona_Archetype__mdt/fields/Sample_Brief__c.field-meta.xml
<CustomField>
    <fullName>Sample_Brief__c</fullName>
    <label>Sample Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>